--- a/package.json
+++ b/package.json
@@ -61,11 +61,13 @@
     "react-image-gallery": "^0.8.3",
     "react-paginate": "^4.4.3",
     "react-redux": "^5.0.5",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "redux": "^3.5.2",
     "redux-devtools": "^3.2.0",
     "redux-thunk": "^2.0.1",
     "s3-uploader": "^2.0.1",
-    "sequelize": "^4.4.2",
+    "sequelize": "4.4.2",
     "serialize-javascript": "^1.2.0",
     "spdy": "^3.4.4",
     "speakingurl": "^13.0.0",
