Adding build hook

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev-server": "nodemon -V src/server.js",
     "dev": "npm-run-all --parallel webpack-dev-server dev-server",
     "build-dev": "webpack --progress --config ./config/webpack.config.development.js",
-    "compile-assets": "webpack --progress -p --config ./config/webpack.config.js",
+    "compile-assets": "NODE_ENV=production webpack --progress -p --config ./config/webpack.config.js",
     "test": "karma start config/karma.conf.js || true",
     "ui-test": "nightwatch",
     "build-place-index": "node src/db/tasks/populatePlaceProperties.js",
@@ -24,6 +24,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "compression": "^1.6.2",
+    "compression-webpack-plugin": "^1.0.1",
     "config": "^1.26.1",
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^4.1.0",
@@ -36,6 +37,7 @@
     "express-http-proxy": "^1.0.6",
     "express-redis-cache": "^1.0.0",
     "express-session": "^1.13.0",
+    "git-revision-webpack-plugin": "^2.5.1",
     "greenlock-express": "^2.0.9",
     "handlebars": "^4.0.10",
     "helmet": "^3.4.0",
@@ -75,6 +77,7 @@
     "superagent": "^3.5.2",
     "vinyl-source-stream": "^1.1.0",
     "webpack-config": "^7.0.0",
+    "webpack-s3-plugin": "^1.0.0-rc.0",
     "xmlbuilder": "^9.0.1"
   },
   "devDependencies": {
@@ -101,7 +104,7 @@
     "karma-webpack": "^2.0.4",
     "mocha": "^3.4.2",
     "nightwatch": "^0.9.4",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.7.2",
     "nodemon": "^1.8.1",
     "npm-run-all": "^4.0.2",
     "phantomjs-prebuilt": "^2.1.7",
