--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "spdy": "^3.4.4",
     "speakingurl": "^13.0.0",
     "superagent": "^3.5.2",
+    "tape": "~4.8.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack-config": "^7.5.0",
     "webpack-s3-plugin": "^1.0.0-rc.0",
@@ -111,6 +112,7 @@
     "redux-devtools": "^3.1.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "supertest": "~3.0.0",
     "webpack": "^3.4.0",
     "webpack-dev-server": "^2.9.4"
   },
