--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "redux-devtools": "^3.2.0",
     "redux-thunk": "^2.0.1",
     "s3-uploader": "^2.0.1",
-    "sequelize": "4.4.2",
+    "sequelize": "~4.37.5",
     "serialize-javascript": "^1.2.0",
     "spdy": "^3.4.4",
     "speakingurl": "^13.0.0",
@@ -108,6 +108,7 @@
     "node-sass": "^4.7.2",
     "nodemon": "^1.8.1",
     "npm-run-all": "^4.0.2",
+    "pgtools": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.7",
     "redux-devtools": "^3.1.1",
     "sass-loader": "^6.0.6",
