--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^7.0.2",
+    "pg-hstore": "^2.3.2",
     "pmx": "^1.0.1",
     "react": "^15.0.1",
     "react-addons-create-fragment": "^15.3.0",
