--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "npm-run-all --parallel webpack-dev-server dev-server",
     "build-dev": "webpack --progress --config ./config/webpack.config.development.js",
     "compile-assets": "NODE_ENV=production webpack --progress -p --config ./config/webpack.config.js",
-    "test": "karma start config/karma.conf.js || true",
+    "test": "echo 'no tests currently configured'",
     "ui-test": "nightwatch",
     "build-place-index": "node src/db/tasks/populatePlaceProperties.js",
     "start": "NODE_ENV=production node src/server.js"
@@ -17,102 +17,72 @@
   "author": "Lucas Vogelsang <l@lucasvo.com>",
   "license": "MIT",
   "dependencies": {
-    "babel-cli": "^6.7.7",
-    "babel-plugin-transform-require-ignore": "^0.1.1",
-    "babel-register": "^6.7.2",
-    "babelify": "^7.3.0",
+    "babel-core": "~6.26.0",
+    "babel-loader": "~7.1.1",
+    "babel-plugin-transform-object-rest-spread": "~6.23.0",
+    "babel-plugin-transform-require-ignore": "~0.1.1",
+    "babel-preset-es2015": "~6.6.0",
+    "babel-preset-react": "~6.5.0",
+    "babel-register": "~6.7.2",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.15.0",
-    "compression": "^1.6.2",
-    "compression-webpack-plugin": "^1.0.1",
-    "config": "^1.26.1",
-    "connect-flash": "^0.1.1",
-    "connect-session-sequelize": "^4.1.0",
-    "cookie-parser": "^1.4.3",
-    "debug": "^2.2.0",
-    "dotenv": "^4.0.0",
-    "email-templates": "^2.4.0",
-    "express": "^4.13.4",
-    "express-busboy": "^6.0.1",
-    "express-http-proxy": "^1.0.6",
-    "express-redis-cache": "^1.0.0",
-    "express-session": "^1.13.0",
-    "git-revision-webpack-plugin": "^2.5.1",
-    "greenlock-express": "^2.0.9",
-    "handlebars": "^4.0.10",
-    "helmet": "^3.4.0",
-    "helmet-csp": "^2.3.0",
-    "html-entities": "^1.2.0",
-    "json-loader": "^0.5.4",
-    "juice": "^4.1.0",
-    "leaflet": "^1.0.2",
-    "leaflet.markercluster": "^1.0.0-rc.1.0",
-    "letsencrypt-express": "^2.0.6",
-    "lodash": "^4.12.0",
-    "marked": "^0.3.5",
-    "moment": "^2.13.0",
-    "multer": "^1.1.0",
-    "nodemailer": "^4.0.1",
-    "nodemon": "^1.9.1",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "pg": "^7.0.2",
-    "pmx": "^1.0.1",
-    "react": "^15.0.1",
-    "react-addons-create-fragment": "^15.3.0",
-    "react-dom": "^15.0.1",
-    "react-image-gallery": "^0.8.3",
-    "react-paginate": "^4.4.3",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
-    "redux": "^3.5.2",
-    "redux-devtools": "^3.2.0",
-    "redux-thunk": "^2.0.1",
-    "s3-uploader": "^2.0.1",
+    "body-parser": "~1.15.0",
+    "compression": "~1.6.2",
+    "compression-webpack-plugin": "~1.0.1",
+    "config": "~1.26.1",
+    "connect-flash": "~0.1.1",
+    "connect-session-sequelize": "~4.1.0",
+    "cookie-parser": "~1.4.3",
+    "copy-webpack-plugin": "~4.0.1",
+    "css-loader": "~0.28.4",
+    "debug": "~2.2.0",
+    "dotenv": "~4.0.0",
+    "email-templates": "~2.4.0",
+    "expect": "~1.18.0",
+    "express": "~4.13.4",
+    "express-redis-cache": "~1.0.0",
+    "express-session": "~1.13.0",
+    "extract-text-webpack-plugin": "~3.0.0",
+    "git-revision-webpack-plugin": "~2.5.1",
+    "greenlock-express": "~2.0.9",
+    "helmet": "~3.4.0",
+    "helmet-csp": "~2.3.0",
+    "html-entities": "~1.2.0",
+    "json-loader": "~0.5.4",
+    "juice": "~4.1.0",
+    "leaflet": "~1.0.2",
+    "leaflet.markercluster": "~1.0.0-rc.1.0",
+    "lodash": "~4.12.0",
+    "marked": "~0.3.5",
+    "moment": "~2.13.0",
+    "multer": "~1.1.0",
+    "node-sass": "~4.7.2",
+    "nodemailer": "~4.0.1",
+    "nodemon": "~1.9.1",
+    "passport": "~0.3.2",
+    "passport-local": "~1.0.0",
+    "pg": "~7.0.2",
+    "react": "~15.3.0",
+    "react-dom": "~15.3.0",
+    "react-image-gallery": "~0.8.3",
+    "react-paginate": "~4.4.3",
+    "react-redux": "~5.0.5",
+    "react-router-dom": "~4.1.2",
+    "redux": "~3.5.2",
+    "redux-thunk": "~2.0.1",
+    "s3-uploader": "~2.0.1",
+    "sass-loader": "~6.0.6",
     "sequelize": "4.4.2",
-    "serialize-javascript": "^1.2.0",
-    "spdy": "^3.4.4",
-    "speakingurl": "^13.0.0",
-    "superagent": "^3.5.2",
-    "vinyl-source-stream": "^1.1.0",
-    "webpack-config": "^7.5.0",
-    "webpack-s3-plugin": "^1.0.0-rc.0",
-    "xmlbuilder": "^9.0.1"
+    "speakingurl": "~13.0.0",
+    "style-loader": "~0.18.2",
+    "superagent": "~3.5.2",
+    "webpack": "~3.4.0",
+    "webpack-s3-plugin": "~1.0.0-rc.0",
+    "xmlbuilder": "~9.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.7.7",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-register": "^6.5.2",
-    "browserify": "^14.4.0",
-    "concurrently": "^3.5.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
-    "expect": "^1.18.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "isparta-loader": "^2.0.0",
-    "karma": "^1.7.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage": "^1.1.1",
-    "karma-junit-reporter": "^1.1.0",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.4",
-    "mocha": "^3.4.2",
-    "nightwatch": "^0.9.4",
-    "node-sass": "^4.7.2",
-    "nodemon": "^1.8.1",
-    "npm-run-all": "^4.0.2",
-    "phantomjs-prebuilt": "^2.1.7",
-    "redux-devtools": "^3.1.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.4.0",
-    "webpack-dev-server": "^2.9.4"
+    "nightwatch": "~0.9.4",
+    "npm-run-all": "~4.0.2",
+    "webpack-dev-server": "~2.9.4"
   },
   "repository": "git@github.com:iOverlander/ioverlander-server.git"
 }
